completed the header section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="website-header">
+        <div class="hero-section">
+            <div class="hero-section-left">
+                <h1 class="main-title">Let's make beautiful flowers a part of your life.</h1>
+                <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="hero-section-right">
+                <img src="./images/pngwing 10.png" alt="Beautiful red flower">
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="featured-area">
+            
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
