created two more sections

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="website-header">
         <div class="hero-section">
             <div class="hero-section-left">
                 <h1 class="main-title">Let's make beautiful flowers a part of your life.</h1>
-                <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="section-desc">It is a long established fact that a reader will be distracted by the readable
+                    content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                    more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
             <div class="hero-section-right">
@@ -22,7 +26,54 @@
 
     <main>
         <section class="featured-area">
-            
+            <div class="featured-intro">
+                <h2 class="section-title">Our Featured Flowers</h2>
+                <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="featured-flower-area">
+                <div class="featured-flower">
+                    <div class="img-container1">
+                        <img src="./images/pngwing 6.png" alt="Pink flower tree">
+                    </div>
+                    <div class="img-name-container">
+                        <p>Pink Flower Tree</p>
+                    </div>
+                </div>
+
+
+                <div class="featured-flower">
+                    <div class="img-container2">
+                        <img src="./images/pngwing 5.png" alt="Flower bouquet">
+                    </div>
+                    <div class="img-name-container">
+                        <p>Flower Bouquet</p>
+                    </div>
+                </div>
+
+                <div class="featured-flower">
+                    <div class="img-container3">
+                        <img src="./images/pngwing 7.png" alt="yellow flower">
+                    </div>
+                    <div class="img-name-container">
+                        <p>Yellow Flower</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="why-my-shop">
+            <div>
+                <img src="./images/Group 57.png" alt="Delivery boy icon">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img src="./images/Group 58.png" alt="Delivery boy icon">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div>
+                <img src="./images/Group 59.png" alt="Delivery boy icon">
+                <p>24/7 Free Support.</p>
+            </div>
         </section>
     </main>
 
@@ -30,4 +81,5 @@
 
     </footer>
 </body>
+
 </html>
