my-shop-offer section style completed

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
                 <p>24/7 Free Support.</p>
             </div>
         </section>
+
+        <section class="shop-offer">
+            <div class="shop-offer-container">
+                <div class="offer-details">
+                    <h2 class="section-title">Hot Deal ! Sale Up To 25% <span class="red-color-text">Off</span></h2>
+                    <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="btn-primary">Sign Up</button>
+                </div>
+                <div><img src="./images/pngwing 8.png" alt="Flowers in a tob"></div>
+            </div>
+        </section>
     </main>
 
     <footer>
