insta-post section created

--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
                 <div><img src="./images/pngwing 8.png" alt="Flowers in a tob"></div>
             </div>
         </section>
+
+        <section class="insta-post">
+            <div class="insta-post-intro">
+                <h2 class="section-title">Instagram</h2>
+                <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="insta-post-images">
+                <img src="./images/Flower 01.png" alt="Pink rose">
+                <img src="./images/Rectangle 4.png" alt="White and pink flower">
+                <img src="./images/Rectangle 5.png" alt="Flowers in white tob">
+                <img src="./images/Rectangle 6.png" alt="Red rose">
+            </div>
+        </section>
+
     </main>
 
     <footer>
