--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             </div>
         </section>
 
+        <section class="subscription-form">
+            <h2 class="section-title">Get The Latest Deals</h2>
+            <p class="section-desc">$30 coupon for first shopping</p>
+            <div class="subscription-area">
+                <input type="email" name="email" id="email" placeholder="Enter your email here...">
+                <input type="button" value="Subscribe" class="btn-primary">
+            </div>
+        </section>
+
     </main>
 
     <footer>
