created the footers ection

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </header>
 
+
     <main>
         <section class="featured-area">
             <div class="featured-intro">
@@ -108,11 +109,15 @@
                 <input type="button" value="Subscribe" class="btn-primary">
             </div>
         </section>
-
     </main>
 
-    <footer>
 
+    <footer class="footer-area">
+        <div class="footer-container">
+            <h2 class="footer-title"><span class="red-color-text">Flower</span>Shop</h2>
+            <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <small>&commat;2020-2023, FlowerShop.com. All rights reserved.</small>
+        </div>
     </footer>
 </body>
 
