created the bonus section

--- a/index.html
+++ b/index.html
@@ -109,6 +109,33 @@
                 <input type="button" value="Subscribe" class="btn-primary">
             </div>
         </section>
+
+        <section class="location-time">
+            <div class="location-time-container">
+                <div class="location-time-img">
+                    <img src="./images/Rectangle 4.png" alt="Flowe shop">
+                </div>
+
+                <div class="location-time-desc">
+                    <h2 class="section-title">Our Store</h2>
+                    <address>10205 N Saginaw Rd, Cilo</address>
+                    <p class="section-desc">Phone: (810) 686-9500</p>
+                    <h5 class="smaller-title">Opening Hours</h5>
+                    <ul class="shop-hour">
+                        <li>Monday - 9am to 4pm</li>
+                        <li>Tuesday - 9am to 4pm</li>
+                        <li>Wednesday - 9am to 4pm</li>
+                        <li>Thursday - 9am to 4pm</li>
+                        <li>Friday - 2pm to 5pm</li>
+                        <li>Saturday - 9am to 2pm</li>
+                        <li>Sunday - 9am to 2pm</li>
+                    </ul>
+                    <p id="italic-desc" class="section-desc">Our hours are subject to change</p>
+                    <button class="btn-primary">Get Direction</button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
