Given the final touch and made some minor changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+
+    <!-- WEBISITE HEADER SECTION -->
+
     <header class="website-header">
         <div class="hero-section">
             <div class="hero-section-left">
@@ -26,6 +29,9 @@
 
 
     <main>
+
+        <!-- FEATURED FLOWER SECTION -->
+
         <section class="featured-area">
             <div class="featured-intro">
                 <h2 class="section-title">Our Featured Flowers</h2>
@@ -62,6 +68,9 @@
             </div>
         </section>
 
+
+        <!-- WHY MY SHOP SECTION -->
+
         <section class="why-my-shop">
             <div>
                 <img src="./images/Group 57.png" alt="Delivery boy icon">
@@ -77,6 +86,9 @@
             </div>
         </section>
 
+
+        <!-- SHOP OFFER SECTION -->
+
         <section class="shop-offer">
             <div class="shop-offer-container">
                 <div class="offer-details">
@@ -87,6 +99,9 @@
                 <div><img src="./images/pngwing 8.png" alt="Flowers in a tob"></div>
             </div>
         </section>
+
+
+        <!-- INSTA POST SECTION -->
 
         <section class="insta-post">
             <div class="insta-post-intro">
@@ -101,6 +116,9 @@
             </div>
         </section>
 
+
+        <!-- SUBSCRIPTION FORM SECTION -->
+
         <section class="subscription-form">
             <h2 class="section-title">Get The Latest Deals</h2>
             <p class="section-desc">$30 coupon for first shopping</p>
@@ -109,6 +127,9 @@
                 <input type="button" value="Subscribe" class="btn-primary">
             </div>
         </section>
+
+
+        <!-- BONUS SECTION. SECTION ABOUT LOCATION & OPENING HOURS -->
 
         <section class="location-time">
             <div class="location-time-container">
@@ -138,6 +159,8 @@
 
     </main>
 
+
+    <!-- FOOTER SECTION -->
 
     <footer class="footer-area">
         <div class="footer-container">
