added button shadow and a horizontal line in location and opening hour section

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <section class="shop-offer">
             <div class="shop-offer-container">
                 <div class="offer-details">
-                    <h2 class="section-title">Hot Deal ! Sale Up To 25% <span class="red-color-text">Off</span></h2>
+                    <h2 class="section-title">Hot Deal ! Sale Up To <span class="red-color-text">25% Off</span></h2>
                     <p class="section-desc">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                     <button class="btn-primary">Sign Up</button>
                 </div>
@@ -135,11 +135,12 @@
         <section class="location-time">
             <div class="location-time-container">
                 <div class="location-time-img">
-                    <img src="./images/Rectangle 4.png" alt="Flowe shop">
+                    <img src="./images/flower-shop.jpeg" alt="Flowe shop">
                 </div>
 
                 <div class="location-time-desc">
                     <h2 class="section-title">Our Store</h2>
+                    <hr>
                     <address>10205 N Saginaw Rd, Cilo</address>
                     <p class="section-desc">Phone: (810) 686-9500</p>
                     <h5 class="smaller-title">Opening Hours</h5>
